--- a/assets/css/style-vero.css
+++ b/assets/css/style-vero.css
@@ -36,8 +36,12 @@ body {
     color: var(--color-text);
 }
 
-
 /* Home Page  */
+.home {
+    display: flex;
+    flex-direction: column;
+}
+
 .home__menu {
     /* border: 1px solid red; */
     height: 15%;
