--- a/test/test.css
+++ b/test/test.css
@@ -4,47 +4,28 @@
     box-sizing: border-box;
 }
 
-.menu {
-    margin-top: 200px;
-    margin-left: 300px;
+li {
+    list-style: none;
 }
 
-.menu__dropdown {
+.menu {
+    position: fixed;
+    right: 25px;
+    bottom: 15px;
+}
+
+.dropdown {
     position: relative;
 }
 
-.menu__list {
-    display: none;
-}
-
-.menu__dropdown:hover .menu__list {
-    position: absolute;
-    top: -5px;
-    left: -5px;
-
+.features-menu {
     display: flex;
     flex-direction: column;
 
-    padding-top: 50px;
-
-    background-color: beige;
-
-    z-index: 1;
-}
-
-.menu__list li {
-    list-style-type: none;
-
-    padding: 0 40px 10px 20px;
-}
-
-.menu__item a {
-    text-decoration: none;
-    color: black;
-}
-
-.menu__title {
-    z-index: 2;
-    position: relative;
-    cursor: pointer;
+    background-color: red;
+    border-radius: 5px;
+    /* padding-right: 60px; */
+    position: absolute;
+    right: 50px;
+    bottom: 50px;
 }
