--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body {
 
 /* Nav Menu  */
 .menu {
-    /* border: 1px solid red; */
+    border: 1px solid red;
     height: 15vh;
     width: 100%;
     padding: 0 10%;
@@ -137,7 +137,7 @@ body {
 }
 
 .home__content {
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
     height: 60vh;
     width: 100%;
 
@@ -147,15 +147,15 @@ body {
 }
 
 .content__container {
-    /* border: 1px solid green; */
+    border: 1px solid green;
     height: 40vh;
     width: 100%;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .content__1 {
@@ -180,8 +180,76 @@ body {
 .home__skill {
     height: 25vh;
     width: 100%;
+    padding-left: 25px;
+
+    font-size: var(--font-base);
+    font-weight: 700;
+    letter-spacing: 0.5px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
+.home__skill img {
+    height: 40px;
+    width: 40px;
+    position: relative;
+    background-color: #e00000;
+    padding: 6px;
+    border-radius: 50px;
+}
+
+.test-bar {
+    height: 50px;
+    width: 250px;
+
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+
+
+/* ABOUT PAGE  */
+.about__container {
+    background-color: lightgray;
+
+    height: 85vh;
+    width: 100%;
+    padding: 50px 25px;
+
+
+}
+
+.about__img {
+    height: 200px;
+    width: auto;
+    padding: 0px 25px 20px 0;
+
+}
+
+
+/* PORTFOLIO PAGE  */
+.container {
+    border: 1px solid green;
+    display: flex;
+    overflow-x: scroll;
+    padding: 24px;
+    width: 300px;
+    scroll-snap-type: x mandatory;
+    scroll-padding: 24px;
+    border-radius: 8px;
+    gap: 12px;
+}
+
+.item {
+    border: 1px solid black;
+    flex: 0 0 100%;
+    padding: 24px;
+    border-radius: 8px;
+    scroll-snap-align: start;
+}
 
 
 
